# Algorithm

cpp-solve/: CMakeLists.txt  main.cpp  playgroud.cpp
cpp-solve/algo/: hex.cpp  high_precision.cpp  linklist.cpp  max_repear_sub_arr.cpp  sqrt.cpp  stream_median.cpp
cpp-solve/algo/graph/: dijkstra.cpp  prim.cpp
cpp-solve/algo/high_precision/: substract.cpp
cpp-solve/gramma/: c11_singleton.cpp  class_static_func.cpp  class_static_obj.cpp  static_global.cpp  static_local.cpp
cpp-solve/gramma/singleton/: locked_lanhan.cpp  normal_lanhan.cpp
cpp-solve/include/: graph.h  tree.h
cpp-solve/learn/: Singleton.cpp  complex_test.cpp  play.cpp
cpp-solve/leetcode/: ms_p3.cpp  s1356.cpp  s62.cpp  s861.cpp  test.cpp
cpp-solve/leetcode/binary_tree/: s105.cpp
cpp-solve/leetcode/dp/: min_diff_slit.cpp
cpp-solve/leetcode/num/: my_atoi.cpp  reverse_int.cpp
cpp-solve/leetcode/sort/: max_k_heap.cpp  max_k_partition.cpp  sort.cpp
cpp-solve/tech-test/: build_seq_from_post_in_order.cpp  build_seq_from_pre_in_order.cpp  build_seq_from_pre_post_order.cpp  build_tree_from_post_in_order.cpp  build_tree_from_pre_in_order.cpp  play.cpp  print_binary_tree.cpp
java/: CoinsInALine.java  DiffAbs.java  QuickSort.java
java/design/: Main.java
notes/算法与数据结构/1 动态规划/: 403. 青蛙过河.md  53. 最大子序和.md  不同路径（考虑障碍物的DP）.md
notes/算法与数据结构/1 动态规划/LCS 最长公共子串/: 583. 两个字符串的删除操作.md
notes/算法与数据结构/1 动态规划/匹配问题/: 10. 正则表达式匹配.md  97. 交错字符串.md
notes/算法与数据结构/1 动态规划/背包问题/: 416. 分割等和子集.md
notes/算法与数据结构/1 动态规划/自底向上DP/: 312. 戳气球.md  516. 最长回文子序列.md
notes/算法与数据结构/2 排序/: 00. 链表排序算法.md  215. 数组中的第K个最大元素.md
notes/算法与数据结构/2 排序/归并排序/: 23. 合并K个升序链表.md  315. 计算右侧小于当前元素的个数.md
notes/算法与数据结构/4 线性数据结构/单调栈/: 321. 拼接最大数.md  42. 接雨水.md  503. 下一个更大元素 II.md
notes/算法与数据结构/4 线性数据结构/堆/: 00. 接雨水.md  295. 数据流的中位数.md
notes/算法与数据结构/4 线性数据结构/栈/: 726. 原子的数量.md
notes/算法与数据结构/5 树数据结构/N叉树/: 440. 字典序的第K小数字.md
notes/算法与数据结构/5 树数据结构/二叉树/二叉搜索树/: 00. 二叉搜索树与【单调栈】.md  利用单调栈来验证二叉搜索树.md
notes/算法与数据结构/5 树数据结构/二叉树/完全二叉树/: 958. 二叉树的完全性检验.md
notes/算法与数据结构/5 树数据结构/二叉树/序列化/: 449. 序列化和反序列化二叉搜索树.md  652. 寻找重复的子树.md
notes/算法与数据结构/5 树数据结构/并查集/: 582. 杀掉进程.md
notes/算法与数据结构/6 搜索法/DFS/: 93. 复原IP地址.md
notes/算法与数据结构/7 滑动窗口/: 340. 至多包含 K 个不同字符的最长子串.md  718. 最长重复子数组.md
notes/算法与数据结构/8 链表/: 19. 删除链表的倒数第N个节点.md
notes/算法与数据结构/8 链表/反转链表 链表递归/: 234. 回文链表.md  92. 反转链表 II.md
notes/算法与数据结构/8 链表/链表排序/: 23. 合并K个升序链表.md
notes/算法与数据结构/9 数学/位运算/: 405. 数字转换为十六进制数.md
notes/算法与数据结构/9 数学/回文数 atoi/: 7. 整数反转.md
notes/算法与数据结构/9 数学/找规律/: 1363. 形成三的最大倍数.md
notes/算法与数据结构/9 数学/随机/: 528. 按权重随机选择.md
notes/算法与数据结构/9 数学/随机/蓄水池抽样/: 001. 蓄水池抽样原理.md  蓄水池抽样1.py  蓄水池抽样k.py
notes/算法与数据结构/下一个数字(排列)/: 60. 排列序列.md
notes/算法与数据结构/动态规划/股票买卖问题/: 123. 买卖股票的最佳时机 III.md
notes/算法与数据结构/树数据结构/二叉树/子结构/: 572. 另一个树的子树.md
notes/算法与数据结构/难写的模拟题/: 54. 螺旋矩阵.md
notes/算法与数据结构/难写的模拟题/nSum问题/: 167. 两数之和 II - 输入有序数组.md  18. 四数之和.md  454. 四数相加 II.md
python/: a.py  grad_sqrt.py  maximum_sum_of_rect_points.py
python/array/: code1.py
python/binary_search/: s1482.py  s209.py  s29.py
python/binary_tree/: bst_preorder.py
python/dfs/: N皇后.py
python/dp/: 2d_LIS.py  alignment.py  s152.py  s376.py  s403.py  戳气球.py  高空扔鸡蛋.py
python/greedy/: maximum_sum_of_rect_points.py
python/linklist/: remove_k.py  s23.py
python/math/: n_bisearch_tree.py
python/ml/: auc.py  logistic_regression.py  mlp.py  randn1.py  randn2.py  ucb.py
python/random/: alias_sampling.py  calc_pi.py
python/simulate/: 360乌龟爬.py  360乌龟爬1.txt  360乌龟爬2.txt  360装载货物.py  360装载货物.txt  值日.py  值日.txt  多重集合.py  多重集合.txt  奶茶.py  流.py  流.txt
python/slide_window/: s718.py
python/sort/: bucket_sort.py  count_sort.py  s315.py
python/stack/: num_of_stack.py
python/string/: s415.py
python/tencent/: p1.py  p1c1.txt  p1c2.txt  p2.py  p2.txt  p5.py  p5c2.txt
python/union_set/: s582.py
