cmake_minimum_required(VERSION 3.15)
project(defeat_cpp)
set(CMAKE_CXX_STANDARD 17)
include_directories(/data/Project/Algorithm/cpp-solve/include)
add_executable(s62 leetcode/s62.cpp)
add_executable(s861 leetcode/s861.cpp)
add_executable(s1356 leetcode/s1356.cpp)
add_executable(two_sum leetcode/n_sum/two_sum.cpp)
add_executable(three_sum leetcode/n_sum/three_sum.cpp)
add_executable(four_sum leetcode/n_sum/four_sum.cpp)
add_executable(four_sum_2 leetcode/n_sum/four_sum_2.cpp)
add_executable(framework leetcode/binary_search/framework.cpp)
add_executable(findMedianSortedArrays leetcode/binary_search/findMedianSortedArrays.cpp)
add_executable(searchRotateArray leetcode/binary_search/searchRotateArray.cpp)
add_executable(minRotateArray leetcode/binary_search/minRotateArray.cpp)
add_executable(s3 leetcode/sliding_window/s3.cpp)
add_executable(s76 leetcode/sliding_window/s76.cpp)
add_executable(s438 leetcode/sliding_window/s438.cpp)
add_executable(s209 leetcode/sliding_window/s209.cpp)
add_executable(s84 leetcode/mono_stack/s84.cpp)
add_executable(s316 leetcode/mono_stack/s316.cpp)
add_executable(s321 leetcode/mono_stack/s321.cpp)
add_executable(s402 leetcode/sliding_window/s402.cpp)
add_executable(s496 leetcode/sliding_window/s496.cpp)
add_executable(01bag leetcode/dp/01bag.cpp include/graph.h )
add_executable(complete_bag leetcode/dp/complete_bag.cpp)
add_executable(sort leetcode/sort/sort.cpp)
add_executable(play tech-test/play.cpp)
add_executable(dijkstra algo/graph/dijkstra.cpp)
add_executable(prim algo/graph/prim.cpp)
add_executable(max_k_heap leetcode/sort/max_k_heap.cpp)
add_executable(max_k_partition leetcode/sort/max_k_partition.cpp)
add_executable(linklist algo/linklist.cpp)
add_executable(high_precision algo/high_precision.cpp)
add_executable(s105 leetcode/binary_tree/s105.cpp)
add_executable(substract algo/high_precision/substract.cpp)
add_executable(main main.cpp)
add_executable(min_diff_slit leetcode/dp/min_diff_slit.cpp)